# vorbestellungs-kasse

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6761164d8997_initial_schema.py  a3f8e1c29d04_order_id_string.py
app/: config.py  database.py  jinja.py  main.py
app/models/: order.py
app/repositories/: order_repository.py
app/routers/: admin.py  orders.py  sse.py
app/schemas/: order.py
app/services/: csv_import_service.py  order_service.py  printer_service.py
app/templates/: admin.html  ausgabe.html  base.html  index.html  kassenabschluss.html
app/templates/partials/: ausgabe_card.html  ausgabe_list.html  import_result.html  order_card.html  order_list.html  overview.html  printer_status.html  reset_result.html  stats.html
data/: example.csv  example_line_items.csv
docs/: einrichtung.md  eventtag.md  konfiguration.md  neuer-verein.md  troubleshooting.md
scripts/: event.sh  prepare.sh  setup.sh  status.sh  sync.sh
static/: app.css
systemd/: fischverkauf.service  vorbestellungs-kasse.service
tests/: conftest.py  test_csv_import.py  test_orders.py
tests/testdata/: beispiel_bestellungen.csv
