[project]
name = "fischverkauf"
version = "0.1.0"
description = "Fischerfest – Digitales Bestellabholsystem"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "python-escpos>=3.1",
    "aiofiles>=24.1.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in function signatures is intentional

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
